bug/170: Fixed excludedFiles for README.md validation